<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".MainActivity">

    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content">

        <ImageView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:id="@+id/toggle"
            android:src="@drawable/toggle"
            app:layout_constraintTop_toTopOf="parent"
            app:layout_constraintLeft_toLeftOf="parent"
            android:layout_marginStart="24dp"
            android:layout_marginTop="62dp"/>

        <ImageView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:src="@drawable/profile"
            app:layout_constraintTop_toTopOf="parent"
            app:layout_constraintRight_toRightOf="parent"
            android:layout_marginEnd="24dp"
            android:layout_marginTop="56dp"/>

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:id="@+id/find"
            app:layout_constraintTop_toBottomOf="@id/toggle"
            app:layout_constraintLeft_toLeftOf="parent"
            android:layout_marginStart="24dp"
            android:layout_marginTop="30dp"
            android:text="@string/find"
            android:textColor="@color/black"
            android:textSize="34sp"
            android:letterSpacing="0.085"/>

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:id="@+id/helper"
            android:text="a"
            app:layout_constraintTop_toBottomOf="@id/toggle"
            app:layout_constraintLeft_toRightOf="@id/find"
            android:layout_marginTop="30dp"
            android:textSize="34sp"
            android:visibility="invisible"/>

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            app:layout_constraintTop_toBottomOf="@id/toggle"
            app:layout_constraintLeft_toRightOf="@id/helper"
            android:textColor="@color/light_grey"
            android:layout_marginTop="30dp"
            android:text="@string/your_doctor"
            android:textSize="34sp"
            android:letterSpacing="0.085"/>

        <EditText
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:id="@+id/search"
            app:layout_constraintTop_toBottomOf="@id/find"
            android:layout_marginHorizontal="24dp"
            android:background="@drawable/search_back"
            android:drawableEnd="@drawable/search_icon"
            android:paddingStart="16dp"
            android:paddingEnd="24dp"
            android:paddingVertical="16dp"
            android:layout_marginTop="24dp"
            android:hint="@string/search"/>

        <GridLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:id="@+id/grid"
            app:layout_constraintTop_toBottomOf="@id/search"
            android:layout_marginTop="24dp"
            android:layout_marginStart="24dp"
            android:rowCount="2"
            android:columnCount="4">

            <LinearLayout
                android:orientation="vertical">
                <ImageView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:src="@drawable/consultation"
                    android:layout_gravity="center"/>

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/consultation"
                    android:textSize="12sp"
                    android:textColor="@color/black"
                    android:layout_marginTop="4dp"/>
            </LinearLayout>

            <LinearLayout
                android:orientation="vertical"
                android:layout_marginStart="39dp">
                <ImageView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:src="@drawable/dental"
                    android:layout_gravity="center"/>

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/dental"
                    android:textSize="12sp"
                    android:textColor="@color/black"
                    android:layout_marginTop="4dp"
                    android:layout_gravity="center"/>
            </LinearLayout>

            <LinearLayout
                android:orientation="vertical"
                android:layout_marginStart="39dp">
                <ImageView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:src="@drawable/heart"
                    android:layout_gravity="center"/>

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/heart"
                    android:textSize="12sp"
                    android:textColor="@color/black"
                    android:layout_marginTop="4dp"
                    android:layout_gravity="center"/>
            </LinearLayout>

            <LinearLayout
                android:orientation="vertical"
                android:layout_marginStart="40dp">
                <ImageView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:src="@drawable/hospitals"
                    android:layout_gravity="center"/>

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/hospitals"
                    android:textSize="12sp"
                    android:textColor="@color/black"
                    android:layout_marginTop="4dp"
                    android:layout_gravity="center"/>
            </LinearLayout>

            <LinearLayout
                android:orientation="vertical"
                android:layout_marginStart="7dp"
                android:layout_marginTop="8dp">
                <ImageView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:src="@drawable/medicines"
                    android:layout_gravity="center"/>

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="Medicines"
                    android:textSize="12sp"
                    android:textColor="@color/black"
                    android:layout_marginTop="4dp"
                    android:layout_gravity="center"/>
            </LinearLayout>

            <LinearLayout
                android:orientation="vertical"
                android:layout_marginStart="39dp"
                android:layout_marginTop="8dp">
                <ImageView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:src="@drawable/physician"
                    android:layout_gravity="center"/>

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/physician"
                    android:textSize="12sp"
                    android:textColor="@color/black"
                    android:layout_marginTop="4dp"
                    android:layout_gravity="center"/>
            </LinearLayout>

            <LinearLayout
                android:orientation="vertical"
                android:layout_marginStart="39dp"
                android:layout_marginTop="8dp">
                <ImageView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:src="@drawable/skin"
                    android:layout_gravity="center"/>

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/skin"
                    android:textSize="12sp"
                    android:textColor="@color/black"
                    android:layout_marginTop="4dp"
                    android:layout_gravity="center"/>
            </LinearLayout>

            <LinearLayout
                android:orientation="vertical"
                android:layout_marginStart="40dp"
                android:layout_marginTop="8dp">
                <ImageView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:src="@drawable/surgeon"
                    android:layout_gravity="center"/>

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/surgeon"
                    android:textSize="12sp"
                    android:textColor="@color/black"
                    android:layout_marginTop="4dp"
                    android:layout_gravity="center"/>
            </LinearLayout>
        </GridLayout>

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:id="@+id/top_doctors"
            app:layout_constraintTop_toBottomOf="@+id/grid"
            app:layout_constraintLeft_toLeftOf="parent"
            android:text="@string/top_doctors"
            android:textSize="18sp"
            android:textColor="@color/black"
            android:layout_marginTop="24dp"
            android:layout_marginStart="24dp"/>

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            app:layout_constraintTop_toBottomOf="@+id/grid"
            app:layout_constraintRight_toRightOf="parent"
            android:text="@string/view_all"
            android:textSize="11sp"
            android:textColor="@color/blue"
            android:layout_marginTop="33dp"
            android:layout_marginEnd="24dp"/>

        <androidx.recyclerview.widget.RecyclerView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:id="@+id/recycler"
            app:layout_constraintTop_toBottomOf="@id/top_doctors"
            android:layout_marginTop="24dp"/>
    </androidx.constraintlayout.widget.ConstraintLayout>

</ScrollView>